--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="para">
             <div class="img">
-                <img src="C:\Users\Dell\Downloads\WhatsApp Image 2025-11-20 at 12.13.58 PM.jpeg" alt="">
+                <img src="images/profile.png" alt="">
             </div>
             <div class="content">
                 <h1>Hello </h1>
