--- a/pojects.html
+++ b/pojects.html
@@ -16,7 +16,7 @@
     <div class="project-grid">
 
         <div class="project-card1">
-            <img src="C:\Users\Dell\Pictures\Screenshots\Screenshot 2026-02-01 184320.png" alt="">
+            <img src="images/profile.png" alt="">
             <div class="sec">
                 <h2>Responsive Portfolio Website</h2> <br>
                 <p>Developed a fully responsive personal portfolio website using HTML5 and CSS3, implementing mobile-first design principles with CSS media queries to ensure compatibility across various screen sizes. Designed modern and structured layouts using Flexbox and CSS Grid for improved visual hierarchy and alignment. Optimized website structure using semantic HTML elements to enhance accessibility and search engine visibility. Ensured cross-browser compatibility and delivered a smooth, user-friendly experience across devices. Integrated interactive UI elements such as hover effects and smooth transitions to improve user engagement. Maintained clean, well-structured, and reusable code following front-end development best practices.</p>
@@ -27,7 +27,7 @@
 
 
         <div class="project-card2">
-            <img src="C:\Users\Dell\Pictures\Screenshots\Screenshot 2026-02-14 085017.png" alt="">
+            <img src="images/eat.png" alt="">
             <div class="sec">
 
             <h2> Eat-Fit Blog Website Clone </h2>
@@ -41,7 +41,7 @@
 
 
         <div class="project-card3">
-            <img src="C:\Users\Dell\Downloads\41598_2026_35655_Fig7_HTML.png" alt="">
+            <img src="images/ai.png" alt="">
             <div class="sec">
             <h2>AI Driven Browser Extension For Website Phishing Detection System </h2>
             <p>Developed an AI-powered browser extension to detect and prevent phishing websites in real time using Machine Learning techniques. Built and trained a classification model in Python to analyze URL-based and content-based features for identifying malicious websites. Designed a Flask-based backend API to process incoming URL requests and return prediction results efficiently. Integrated the ML model with a Chrome extension frontend to provide instant threat alerts and user notifications. Implemented feature extraction techniques and data preprocessing to improve model accuracy and reliability. Ensured seamless communication between the extension and backend server while maintaining performance optimization and clean modular code structure. </p>
