--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="para">
             <div class="img">
-                <img src="images/profile.png" alt="">
+                <img src="images/photo.png" alt="">
             </div>
             <div class="content">
                 <h1>Hello </h1>
