--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     effectively to team and project success.</p>
                 <div class="btn">
                     <button> <a href="contact.html"> <i class="fa-solid fa-envelopes-bulk"></i> contact me</a></button>
-                    <button> <a href="resume/MR (2).pdf"> <i
+                    <button> <a href="assets/MR (2).pdf"> <i
                                 class="fa-solid fa-file"></i> view resume</a></button>
                 </div>
             </div>
